# rust-http-server-docker-example

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
